# ChangeLog for gnome-base/gconf
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.209 2009/05/01 11:39:25 eva Exp $

  01 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gconf-2.20.1-automagic-ldap.patch,
  -files/gconf-2.20.1-drop-gtk-doc.patch,
  -files/gconf-2.22.0-automagic-ldap.patch, -gconf-2.20.1-r1.ebuild,
  -gconf-2.22.0.ebuild, gconf-2.24.0.ebuild, gconf-2.26.0.ebuild:
  Make gconf cross-compilable, bug #262747. Kill gconf-2.26 warning, bug
  #268070. Clean up old revisions.

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gconf-2.24.0.ebuild:
  sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gconf-2.24.0:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> gconf-2.24.0.ebuild:
  arm stable

*gconf-2.26.0 (19 Apr 2009)

  19 Apr 2009; Mart Raudsepp <leio@gentoo.org> +gconf-2.26.0.ebuild:
  New version: --toggle and --search-key-regexp support in gconftool-2; size
  and parsing speed improvements in saved gconf setting trees; bug fixes

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> gconf-2.24.0.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> gconf-2.24.0.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> gconf-2.24.0.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> gconf-2.24.0.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> gconf-2.24.0.ebuild:
  Marking gconf-2.24.0 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> gconf-2.24.0.ebuild:
  Marking gconf-2.24.0 ppc64 stable for bug 260063

  13 Nov 2008; Brent Baude <ranger@gentoo.org> gconf-2.22.0.ebuild:
  Marking gconf-2.22.0 ppc64 stable for bug 236971

*gconf-2.24.0 (20 Oct 2008)

  20 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/gconf-2.24.0-automagic-ldap.patch,