@@ -2,7 +2,9 @@ AUX gconf-2.24.0-automagic-ldap.patch 2442 RMD160 adc1d7e7f8209da674fca5ac6ad916
 AUX gconf-2.24.0-no-gconfd.patch 787 RMD160 bbcd0e1dd0f49053522e703c33a9befb392b2203 SHA1 ccc94c4766a29f1bb3f16c1d1995996ba682686a SHA256 f8352648276d2a2dab162ddade55ec0371e7c4f8bc3834de246fda8c32c66d3c
 DIST GConf-2.24.0.tar.bz2 1467817 RMD160 b4016275e9dffa248620303bc2241f6c0081be06 SHA1 e93ff2609c0278075acabdf609f42aa406e20c8e SHA256 990003904ee13b2fd98a61d55fa4d0fcb30fb233454a036bb9465f42d1acbb1b
 DIST GConf-2.26.0.tar.bz2 1490741 RMD160 0673a347b42519f411a7ba247aad12e8249f754d SHA1 317fd4504cc4104b7b914326cbb3b73d61234b4c SHA256 2b9fe741f84d78d7c4f18835728facce81f7db656c2c37f669ee61785911da10
+DIST GConf-2.26.2.tar.bz2 1474738 RMD160 280cd55dc3562445c716b88dfddba4ddd2508786 SHA1 bf5323d974fa22165de2144100234647fd50ef17 SHA256 717af270db891088394d154e3e22acc01af382306624c83679a4f8d6ba8467ed
 EBUILD gconf-2.24.0.ebuild 2477 RMD160 6f5abdf3a731ae3832abf5c248f75d768cbb1ed0 SHA1 3ba25dfe7de59bf3b9b2f667404a481536c41e40 SHA256 044db05b0ad632f0438f48189a90a3eca68bf1315119c3f0fa5e84ceeac5133b
 EBUILD gconf-2.26.0.ebuild 2634 RMD160 dab7e124c3ebb6242f74fcf400d332faa693801f SHA1 f445a63e56e46862ed69aa23131845be570473fa SHA256 fc41bf13ce96a5a4d4bafd2e8f083342d9c2a7d47b0acade6a366aab246136b2
-MISC ChangeLog 27418 RMD160 349769a73245118601db727dc2bbfa66caef1af8 SHA1 045efdcaaa3774488744bb4b312c5cbce9047ca8 SHA256 4feec3020169c87fe0893d60aa5ff5191841eb1e5fe598027fdae9bdeedf6b94
+EBUILD gconf-2.26.2.ebuild 2693 RMD160 c98137ccb428963e9a16d0c54577d751e4127d05 SHA1 4a25eb47a83907687eb20deffc8758a703851fc7 SHA256 1babd107552a7c9cbf655879524e0d839302289d0a385f5f77f6aa5bf2055f5a
+MISC ChangeLog 27579 RMD160 6a78ef670ddbed4acf5d8c6576d108d99620818e SHA1 c4068137c6eada2eb6a545a183adfb2b49917eaa SHA256 8a405d7a5ab8ce92cc5c39ad17152901fe555cfef80ce5a8ecaa6811bbee58bb
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
