@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gconf
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.209 2009/05/01 11:39:25 eva Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.210 2009/05/16 09:47:56 eva Exp $
+
+*gconf-2.26.2 (16 May 2009)
+
+  16 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +gconf-2.26.2.ebuild:
+  Bump to 2.26.2. Speed improvments to markup backend.
 
   01 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
   -files/gconf-2.20.1-automagic-ldap.patch,
